--- a/project_sequence/i18n/project_sequence.pot
+++ b/project_sequence/i18n/project_sequence.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -19,31 +19,8 @@ msgid "Config Settings"
 msgstr ""
 
 #. module: project_sequence
-#: model:ir.model.fields,field_description:project_sequence.field_project_project__display_name
-#: model:ir.model.fields,field_description:project_sequence.field_res_config_settings__display_name
-msgid "Display Name"
-msgstr ""
-
-#. module: project_sequence
-#: model:ir.model.fields,field_description:project_sequence.field_project_project__id
-#: model:ir.model.fields,field_description:project_sequence.field_res_config_settings__id
-msgid "ID"
-msgstr ""
-
-#. module: project_sequence
-#: model:ir.model.fields,field_description:project_sequence.field_project_project____last_update
-#: model:ir.model.fields,field_description:project_sequence.field_res_config_settings____last_update
-msgid "Last Modified on"
-msgstr ""
-
-#. module: project_sequence
 #: model:ir.model.fields,field_description:project_sequence.field_project_project__name
 msgid "Name"
-msgstr ""
-
-#. module: project_sequence
-#: model:ir.model,name:project_sequence.model_project_project
-msgid "Project"
 msgstr ""
 
 #. module: project_sequence
@@ -76,4 +53,9 @@ msgstr ""
 msgid ""
 "Use %(sequence_code)s and %(name)s to include the sequence code and the name"
 " of the project in the display name."
+msgstr ""
+
+#. module: project_sequence
+#: model:ir.model,name:project_sequence.model_project_project
+msgid "WBS element"
 msgstr ""
